# FinBharat_Dataset

./: .env.example  .gitignore  finBharat_plan.md  finBharat_plan_updated.md  main.py  pyproject.toml  session-ses_1a73.md  splits.json
dataset_creation/easy_medium_creation/: run_easy_medium_qa.py
dataset_creation/hard_multihop_creation/: run_hard_multihop_qa.py
dataset_creation/ocr/: README.md  batch_pdf2md.py  requirements.txt
dataset_creation/qa_pipeline_v2/: chunking.py  prompts.py  qa_generation.py
docs/: evaluation_commands.md  pending_implementations.md  test_descriptions.md
results_summary/: FinBharat_Group_Briefing.md  all_aggregates.json  closed_book_all_models.csv  difficulty_degradation.csv  model_averages.csv  pilot_results_report.md  regime_comparison.csv  results_all_runs.csv
results_summary/clean_package/: README.md  all_metrics.csv  model_summary.csv
results_summary/clean_package/per_question_scores/: llama3.1-8b_easy_closed_book.jsonl  llama3.1-8b_hard_closed_book.jsonl  llama3.1-8b_medium_closed_book.jsonl  llama3.1-8b_multihop_closed_book.jsonl  llama3.2-3b_easy_closed_book.jsonl  llama3.2-3b_hard_closed_book.jsonl  llama3.2-3b_medium_closed_book.jsonl  llama3.2-3b_multihop_closed_book.jsonl  llama3.3-70b_easy_closed_book.jsonl  llama3.3-70b_hard_closed_book.jsonl  llama3.3-70b_medium_closed_book.jsonl  llama3.3-70b_multihop_closed_book.jsonl  llama4-maverick_easy_closed_book.jsonl  llama4-maverick_hard_closed_book.jsonl  (+22 more)
scripts/: run_closed_book.py
src/finbharat/: __init__.py  cli.py
tests/: test_metrics.py
(+86 files in other folders)
