[project]
name = "finbharat"
version = "0.1.0"
description = "FinBharat: Indian Financial QA & Hallucination Benchmark for EMNLP 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rouge-score>=0.1.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "tqdm>=4.66",
    "rich>=13.7",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1",
    "transformers>=4.40",
    "bert-score>=0.3.13",
]
openai = [
    "openai>=1.30",
]
data = [
    "datasets>=3.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
all = [
    "finbharat[ml,openai,data,dev]",
]

[project.scripts]
finbharat = "finbharat.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finbharat"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
